wip: implement Account API and test them
