# server/impl/iris/routes.go
@@ -13,41 +13,41 @@ func (s *Server) registerRoutes() {
 		user.Get("/config", s.GetConfig)
 	}
 	{ // user's accounts
-		user.Post("/accounts")
-		user.Get("/accounts")
-		user.Put("/accounts/{account-id:int64}")
-		user.Delete("/accounts/{account-id:int64}")
+		user.Post("/accounts", s.CreateAccount)
+		user.Get("/accounts", s.ListAccounts)
+		user.Put("/accounts/{oid:uint64}", s.UpdateAccount)
+		user.Delete("/accounts/{oid:uint64}", s.DeleteAccount)
 	}
 	{ // user's categories
 		user.Post("/categories")
 		user.Get("/categories")
-		user.Put("/categories/{category-id:int64}")
-		user.Delete("/categories/{category-id:int64}")
+		user.Put("/categories/{oid:uint64}")
+		user.Delete("/categories/{oid:uint64}")
 	}
 	{ // user's shops
 		user.Post("/shops")
 		user.Get("/shops")
-		user.Put("/shops/{shop-id:int64}")
-		user.Delete("/shops/{shop-id:int64}")
+		user.Put("/shops/{oid:uint64}")
+		user.Delete("/shops/{oid:uint64}")
 	}
 	{ // user's fees
 		user.Post("/fees")
 		user.Get("/fees")
-		user.Put("/fees/{fee-id:int64}")
-		user.Delete("/fees/{fee-id:int64}")
+		user.Put("/fees/{oid:uint64}")
+		user.Delete("/fees/{oid:uint64}")
 	}
 	{ // user's daily items
 		user.Post("/daily-items")
 		user.Get("/daily-items")
-		user.Put("/daily-items/{daily-item-id:int64}")
-		user.Delete("/daily-items/{daily-item-id:int64}")
+		user.Put("/daily-items/{oid:uint64}")
+		user.Delete("/daily-items/{oid:uint64}")
 		user.Get("/daily-items/export")
 		user.Post("/daily-items/import")
 	}
 	{ // user's repeating items
 		user.Post("/repeating-items")
 		user.Get("/repeating-items")
-		user.Put("/repeating-items/{repeating-item-id:int64}")
-		user.Delete("/repeating-items/{repeating-item-id:int64}")
+		user.Put("/repeating-items/{oid:uint64}")
+		user.Delete("/repeating-items/{oid:uint64}")
 	}
 }
