# server/models/commons.go
@@ -1,0 +1,5 @@
+package models
+
+type ObjectOID struct {
+	OID uint64 `json:"oid,string"`
+}
